# nlsic_py

./: .gitignore  ChangeLog.txt  MANIFEST.in  README.hmtl  README.rst  fpylapackmodule.c  howto_pkg.txt  meson.build  pyproject.toml  setup.py
doc/: Makefile  conf.py  fpylapack.rst  index.rst  make.bat  modules.rst  nlsic.rst  nnls_f77.rst  nnls_f90.rst
doc/_build/doctrees/: environment.pickle  fpylapack.doctree  index.doctree  modules.doctree  nlsic.doctree  nnls_f77.doctree  nnls_f90.doctree
doc/_build/html/: .buildinfo  fpylapack.html  genindex.html  index.html  modules.html  nlsic.html  nnls_f77.html  nnls_f90.html  objects.inv  py-modindex.html  search.html  searchindex.js
doc/_build/html/_modules/: index.html
doc/_build/html/_modules/nlsic/: lapack_ssg.html  nlsic.html  nnls.html
doc/_build/html/_sources/: fpylapack.rst.txt  index.rst.txt  modules.rst.txt  nlsic.rst.txt  nnls_f77.rst.txt  nnls_f90.rst.txt
fpylapack/: __init__.py  fpylapack  fpylapack.pyf
nlsic/: __init__.py  lapack_ssg.py  nlsic.py  nnls.py
nnls_f77/: howto_build.md  nnls.f  nnls_f77  nnls_f77.pyf  nnls_f77module.c  nnlsr.f
nnls_f90/: howto_build.md  nnls.f90  nnls_f90  nnls_f90-f2pywrappers2.f90  nnls_f90module.c
